finalizando a seção projects

--- a/index.html
+++ b/index.html
@@ -66,51 +66,69 @@
 
   <div class="container projects">
     <header>
-      <span>Meu trabalho</span>
-      <h2>Veja os projetos em destaque</h2>
+      <span class="sub-incon-green">Meu trabalho</span>
+      <h2 class="h2-asap">Veja os projetos em destaque</h2>
     </header>
-    <div class="grid">
-      <div class="card">
-        <img src="" alt="">
-        <div class="text-card">
-          <h3></h3>
-          <p></p>
-        </div>
-        <div class="card">
-          <img src="" alt="">
-          <div class="text-card">
-            <h3></h3>
-            <p></p>
-          </div>
-          <div class="card">
-            <img src="" alt="">
+    <div class="grid-section">
+      <div class="grid">
+        <a href="https://pedrotitu.github.io/Projeto-Travelgram/" target="_blank" rel="noopener noreferrer">
+          <div id="card1" class="card">
+            <img src="/assets/images/Thumbnail_Project-01.png" alt="">
             <div class="text-card">
-              <h3></h3>
-              <p></p>
+              <h3 class="h3-asap">Travelgram</h3>
+              <p class="text-sm-mavenpro">Rede social onde as pessoas mostram os 
+                registros de suas viagens pelo mundo</p>
             </div>
-            <div class="card">
-              <img src="" alt="">
+          </div>
+        </a>
+        <a href="https://pedrotitu.github.io/Projeto-Portal-de-Noticias/" target="_blank" rel="noopener noreferrer">
+          <div id="card2" class="card">
+              <img src="/assets/images/Thumbnail_Project-02.png" alt="">
               <div class="text-card">
-                <h3></h3>
-                <p></p>
+                <h3 class="h3-asap">Tech News</h3>
+                <p class="text-sm-mavenpro">Homepage de um portal de notícias sobre a área de tecnologia</p>
               </div>
-              <div class="card">
-                <img src="" alt="">
-                <div class="text-card">
-                  <h3></h3>
-                  <p></p>
-                </div>
-                <div class="card">
-                  <img src="" alt="">
-                  <div class="text-card">
-                    <h3></h3>
-                    <p></p>
-                  </div>
-
+          </div>
+        </a>
+        <a href="https://pedrotitu.github.io/P-gina-de-receita/" target="_blank" rel="noopener noreferrer">
+          <div id="card3" class="card">
+              <img src="/assets/images/Thumbnail_Project-03.png" alt="">
+              <div class="text-card">
+                <h3 class="h3-asap">Página de receita</h3>
+                <p class="text-sm-mavenpro">Página com o passo a passo de uma receita para cupcakes</p>
+              </div>
+          </div>
+        </a>
+        <a href="#" target="_blank" rel="noopener noreferrer">
+          <div id="card4" class="card">
+              <img src="/assets/images/Thumbnail_Project-04.png" alt="">
+              <div class="text-card">
+                <h3 class="h3-asap">Zingen (Em andamento)</h3>
+                <p class="text-sm-mavenpro">Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+              </div>
+          </div>
+        </a>
+        <a href="#" target="_blank" rel="noopener noreferrer">
+          <div id="card5" class="card">
+              <img src="/assets/images/Thumbnail_Project-05.png" alt="">
+              <div class="text-card">
+                <h3 class="h3-asap">Refund (Em andamento)</h3>
+                <p class="text-sm-mavenpro">Um sistema para pedido e acompanhamento de reembolso </p>
+              </div>
+          </div>
+        </a>
+        <a href="#" target="_blank" rel="noopener noreferrer">
+          <div id="card6" class="card">
+              <img src="/assets/images/Thumbnail_Project-06.png" alt="">
+              <div class="text-card">
+                <h3 class="h3-asap">Página de turismo</h3>
+                <p class="text-sm-mavenpro">Página com as principais informações para quem quer viajar para Busan</p>
+              </div>
+          </div>
+        </a>
       </div>
     </div>
-
-  </div>
+    
   
 </body>
 </html>
