alguns ajustes no 'projects' e estruturando a seção services

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
+
   <div class="container intro">
     <div class="info">
       <div class="header">
@@ -69,8 +70,8 @@
       <span class="sub-incon-green">Meu trabalho</span>
       <h2 class="h2-asap">Veja os projetos em destaque</h2>
     </header>
-    <div class="grid-section">
-      <div class="grid">
+    <div class="grid-projects-section">
+      <div class="grid-projects">
         <a href="https://pedrotitu.github.io/Projeto-Travelgram/" target="_blank" rel="noopener noreferrer">
           <div id="card1" class="card">
             <img src="/assets/images/Thumbnail_Project-01.png" alt="">
@@ -128,6 +129,38 @@
         </a>
       </div>
     </div>
+
+  <div class="container services">
+    <header>
+      <span></span>
+      <h3></h3>
+    </header>
+    <div class="grid-services-section">
+      <div class="grid-services">
+        <div class="services-card">
+          <img src="" alt="">
+          <header>
+            <span></span>
+            <p></p>
+          </header>
+        </div>
+        <div class="services-card">
+          <img src="" alt="">
+          <header>
+            <span></span>
+            <p></p>
+          </header>
+        </div>
+        <div class="services-card">
+          <img src="" alt="">
+          <header>
+            <span></span>
+            <p></p>
+          </header>
+        </div>
+      </div>
+    </div>
+  </div>
     
   
 </body>
