finalizando seção services

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </div>
 
   <div class="container projects">
-    <header>
+    <header class="header-projects">
       <span class="sub-incon-green">Meu trabalho</span>
       <h2 class="h2-asap">Veja os projetos em destaque</h2>
     </header>
@@ -129,33 +129,43 @@
         </a>
       </div>
     </div>
+  </div>
 
   <div class="container services">
-    <header>
-      <span></span>
-      <h3></h3>
+    <header id="header-section">
+      <span class="sub-incon-green">Meus serviços</span>
+      <h3 class="h2-asap">Como posso ajudar o seu negócio</h3>
     </header>
     <div class="grid-services-section">
       <div class="grid-services">
-        <div class="services-card">
-          <img src="" alt="">
-          <header>
-            <span></span>
-            <p></p>
+
+        <div id="services-card1" class="services-card">
+          <div id="icons">
+            <img src="assets/icons/Devices.png" alt="devices icon">
+          </div>
+          <header id="header-card-section">
+            <span class="h3-asap">Websites e Aplicativos</span>
+            <p class="text-sm-mavenpro">Desenvolvimento de interfaces</p>
           </header>
         </div>
-        <div class="services-card">
-          <img src="" alt="">
-          <header>
-            <span></span>
-            <p></p>
+
+        <div id="services-card2" class="services-card">
+          <div id="icons">
+            <img src="assets/icons/HardDrives.png" alt="devices icon">
+          </div>
+          <header id="header-card-section">
+            <span class="h3-asap">API e banco de dados</span>
+            <p class="text-sm-mavenpro">Criação de serviços do sistema</p>
           </header>
         </div>
-        <div class="services-card">
-          <img src="" alt="">
-          <header>
-            <span></span>
-            <p></p>
+
+        <div id="services-card3" class="services-card">
+          <div id="icons">
+            <img src="assets/icons/Infinity.png" alt="devices icon">
+          </div>
+          <header id="header-card-section">
+            <span class="h3-asap">DevOps</span>
+            <p class="text-sm-mavenpro">Gestão e infraestrutura da aplicação</p>
           </header>
         </div>
       </div>
