teste de caminho na estilizacao

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   
   <link rel="icon" href="assets/icons/dev.png" type="image/x-icon">
+  
   <title>Portifólio João Ferreira</title>
-
 
   <link rel="stylesheet" href="styles/index.css">
 
@@ -21,7 +21,7 @@
     <div class="info">
       <div class="header">
         <div class="avatar">
-            <img src="assets/images/avatar_image.jpeg" alt="">
+            <img src="assets/images/Avatar.jpeg" alt="Imagem de João Ferreira">
             <img src="assets/icons/Code2.png" alt="">
         </div>
         <div class="text">
