--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <span class="sub-incon">Hello World! Meu nome é 
             <span class="sub-incon-green">João Ferreira</span> e sou</span>
           <h1 class="h1-asap">Desenvolvedor Fullstack</h1>
-          <p class="text-sm-mavenpro">Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
+          <p class="text-sm-mavenpro">Transformo necessidades em aplicações reais, envolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
         </div>
       </div>
       <div class="tags">
