adicionando caminho para o projeto 6

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               </div>
           </div>
         </a>
-        <a href="#" target="_blank" rel="noopener noreferrer">
+        <a href="https://pedrotitu.github.io/Pagina-de-turismo/" target="_blank" rel="noopener noreferrer">
           <div id="card6" class="card">
               <img src="assets/images/Thumbnail_Project-06.png" alt="">
               <div class="text-card">
